--- a/templates/home/news-post.html
+++ b/templates/home/news-post.html
@@ -31,8 +31,8 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
                 <ul class="sidebar-category-menu">
-                    {% for category in category  %}
-                    <li><a href="{% url 'category_detail' category.id %}" aria-label="{{category.name}}">{{category.name}}</a></li>
+                    {% for news in news|slice:":5" %}
+                    <li><a href="{% url 'newspost' news.slug %}" aria-label="{{news.title}}">{{news.title}}</a></li>
                     {% endfor %}
                 </ul>
         </div>
@@ -74,8 +74,17 @@
         </div>
 
         <div class="static-content">
-            <img src="{{staticpost.banner_image.url}}" class="main-img-news" alt="{{staticpost.title}}"/>
             <p>{{staticpost.content| safe}}</p>
+
+            <div class="news-navigation">
+                {% if previous_post %}
+                    <a href="{% url 'newspost' previous_post.slug %}" class="previous-link">Previous</a>
+                {% endif %}
+            
+                {% if next_post %}
+                    <a href="{% url 'newspost' next_post.slug %}" class="next-link">Next</a>
+                {% endif %}
+            </div>
         </div>
 
 
