--- a/templates/home/all-news.html
+++ b/templates/home/all-news.html
@@ -26,7 +26,7 @@
 
         <div class="sidebar-category">
             <div class="sidebar-category-heading">
-                <strong>Product Category</strong>  
+                <strong>Recent News</strong>  
                 <i class="fa-solid fa-bars"></i>
             </div>
                 <ul class="sidebar-category-menu">
