--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -51,7 +51,7 @@
         <label for="searchshow" class="close-btn-search"><i class="fa-solid fa-xmark"></i></label>
           <div class="header-search">
           <!--input-->
-          <input type="text" name="search" value="{{search}}" id="search" placeholder="Start Typing..." required/>
+          <input type="text" name="search" value="{{search}}" id="search" placeholder="START TYPING CHANGE TO: SEARCH YOUR WATCH..." required/>
           <!--button-->
           <button><i class="fa-solid fa-magnifying-glass"></i></button>
           </div>
