--- a/templates/home/product.html
+++ b/templates/home/product.html
@@ -133,7 +133,7 @@
 
     <section class="d-product-description">
         <h2>Description</h2>
-        <p>{{product.details}}</p>
+        <p>{{product.details| safe}}</p>
     </section>
 
     <section class="d-product-show">
