--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -76,7 +76,7 @@
                 <i class="fa-brands fa-whatsapp"></i>
             </div>
             <a  href="{{sitedata.whatsapp_link}}" aria-label="whatsapp" target="_blank" class="contact-details-box-text">
-                Whatsapp: {{sitedata.phone}}
+                Whatsapp: {{sitedata.whatsapp_number}}
             </a>
         </div>
 
